fix: button wraping

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -49,6 +49,7 @@
 			font-weight: 500;
 			padding: 0.725em 1em;
 			border-radius: 1ch;
+			white-space: nowrap;
 		}
 	}
 }
